@@ -1,13 +1,13 @@
-bin
-blib/
-_build/
-Build
-cover_db/
-Makefile
-MANIFEST.bak
-MYMETA.json
-MYMETA.yml
-pm_to_blib
+/bin
+/blib/
+/_build/
+/Build
+/cover_db/
+/Makefile
+/MANIFEST.bak
+/MYMETA.json
+/MYMETA.yml
+/pm_to_blib
 *.swp
 *.bak
 *.tar.gz
